--- a/FoodDelivery/Views/Cart/Index.cshtml
+++ b/FoodDelivery/Views/Cart/Index.cshtml
@@ -1,55 +1,91 @@
 ﻿@model IEnumerable<FoodDelivery.ViewModel.OrderItemViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cart";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-<h1>Index</h1>
+<h1>Cart</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderItemId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FoodItemName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Amount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderItemTotal)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderItemId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FoodItemName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderItemTotal)
-            </td>
-            <td>
-                    <form method="post" action="Delete">
-                        <input type="hidden" name="id" value="@item.OrderItemId" /> <!-- Замініть це значення на реальний id, який ви хочете видалити -->
-                        <input type="submit" value="Delete" />
-                    </form>
-                </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container">
+
+    @if (Model.Any())
+    {
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderItemId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FoodItemName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Amount)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderItemTotal)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderItemId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FoodItemName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderItemTotal)
+                        </td>
+                        <td>
+                        <td>
+                            <button class="btn btn-danger" onclick="deleteItem(@item.OrderItemId)">Delete</button>
+                        </td>
+
+                        <script>
+                            function deleteItem(orderItemId) {
+                                //if (confirm('Are you sure you want to delete this item?')) {
+                                var token = $('input[name="__RequestVerificationToken"]').val();
+
+                                $.ajax({
+                                    url: '/Cart/Delete/' + orderItemId,
+                                    type: 'DELETE',
+                                    headers: {
+                                        'RequestVerificationToken': token
+                                    },
+                                    success: function () {
+                                        location.reload(); // or update the view accordingly
+                                    },
+                                    error: function () {
+                                        alert('Error deleting item.');
+                                    }
+                                });
+                                //}
+                            }
+                        </script>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <div>
+            <a asp-controller="Checkout" asp-action="Index" class="btn btn-warning">Checkout</a>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-warning text-center p-4" role="alert">
+            Your shopping cart is empty.
+        </div>
+    }
+
+</div>
