--- a/FoodDelivery/Views/Order/Confirmation.cshtml
+++ b/FoodDelivery/Views/Order/Confirmation.cshtml
@@ -11,7 +11,6 @@
     <dl class="row">
         <dt class="col-sm-2">Order ID:</dt>
         <dd class="col-sm-10">@Model.Id</dd>
-
         <!-- Add other properties of OrderViewModel as needed -->
     </dl>
 </div>
@@ -41,44 +40,7 @@
     </table>
 </div>
 
-<div>
-    <h3>Delivery Address</h3>
-    @if (Model.Address != null)
-    {
-        <dl class="row">
-            <dt class="col-sm-2">City:</dt>
-            <dd class="col-sm-10">@Model.Address.City</dd>
-            <dt class="col-sm-2">Street:</dt>
-            <dd class="col-sm-10">@Model.Address.Street</dd>
-            <dt class="col-sm-2">Street Number:</dt>
-            <dd class="col-sm-10">@Model.Address.StreetNumber</dd>
-        </dl>
-    }
-    else
-    {
-        <p>No delivery address available.</p>
-        <!-- Add a form for entering a new address -->
-        <form asp-action="ChangeAddress" method="post">
-            @Html.AntiForgeryToken()
-            <h4>Enter Delivery Address</h4>
-            <div class="form-group">
-                <label for="City">City:</label>
-                <input type="text" class="form-control" id="City" name="City" required>
-            </div>
-            <div class="form-group">
-                <label for="Street">Street:</label>
-                <input type="text" class="form-control" id="Street" name="Street" required>
-            </div>
-            <div class="form-group">
-                <label for="StreetNumber">Street Number:</label>
-                <input type="text" class="form-control" id="StreetNumber" name="StreetNumber" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Save Address</button>
-        </form>
-    }
-</div>
 
-<form method="post" action="@Url.Action("action", "Controller")">
+<form method="post" action="@Url.Action("Pay", "Order", new { id = Model.Id })">
     <button type="submit" class="btn btn-warning">Pay</button>
 </form>
-
