--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/Logo/Logo.png" class="logo" /></a><a class="navbar-brand font-popins fw-medium fs-5" asp-area="" asp-controller="Home" asp-action="Index">FoodDelivery</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/Logo/favicon.svg" class="logo" /></a><a class="navbar-brand font-popins fw-medium fs-5" asp-area="" asp-controller="Home" asp-action="Index">FoodDelivery</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
