--- a/FoodDelivery/wwwroot/css/header.css
+++ b/FoodDelivery/wwwroot/css/header.css
@@ -2,6 +2,7 @@
     /*background-color: #f1f1f1;*/
 }
 .logo{
-    width: 50px;
-    margin-right: 5px;
+    width: 20px;
+    margin-right: 3px;
+    margin-bottom: 5px;
 }
