--- a/FoodDelivery/Views/Home/Index.cshtml
+++ b/FoodDelivery/Views/Home/Index.cshtml
@@ -42,14 +42,6 @@
 </div>
 
 <div class="mt-4 container">
-    <div class="mt-4 mb-2">
-        <a href="@Url.Action("Index", new { category = "All", page = Model.CurrentPage, pageSize = Model.PageSize })" class="btn btn-outline-primary rounded-pill pt-1 pb-1 ps-4 pe-4 mb-2 @(ViewBag.Category == null || ViewBag.Category == "All" ? "active" : "")">All</a>
-        @foreach (var category in ViewBag.Categories)
-        {
-            <a href="@Url.Action("Index", new { category = category.Title, page = Model.CurrentPage, pageSize = Model.PageSize })" class="btn btn-outline-primary rounded-pill pt-1 pb-1 ps-4 pe-4 mb-2 @(ViewBag.Category == category.Title ? "active" : "")">@category.Title</a>
-        }
-    </div>
-
     <div class="row mt-3">
         @foreach (var item in Model.Items)
         {
@@ -74,37 +66,33 @@
             </div>
         }
     </div>
-
-    <!--<p>Total Pages: @Model.TotalPages</p>-->
-    <!--<p>Total Items: @Model.TotalItems</p>-->
-
     <!-- Pagination -->
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            @if (Model.HasPreviousPage)
-            {
-                <li class="page-item pagination-bg">
-                    <a class="page-link pagination-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
-                        <span aria-hidden="true" class="pagination-link fw-medium fs-6">&laquo;</span>
-                    </a>
-                </li>
-            }
+        <nav aria-label="Page navigation">
+            <ul class="pagination pagination-sm justify-content-center">
+                @if (Model.HasPreviousPage)
+                {
+                    <li class="page-item pagination-bg">
+                        <a class="page-link pagination-link" href="@Url.Action("Index", new { page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                            <span aria-hidden="true" class="pagination-link fw-medium fs-6">&laquo;</span>
+                        </a>
+                    </li>
+                }
 
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                <li class="page-item pagination-bg @(i == Model.CurrentPage ? "active" : "")">
-                    <a class="page-link pagination-link fs-6" href="@Url.Action("Index", new { category = ViewBag.Category, page = i, pageSize = Model.PageSize })">@i</a>
-                </li>
-            }
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li class="page-item pagination-bg @(i == Model.CurrentPage ? "active" : "")">
+                        <a class="page-link pagination-link fs-6" href="@Url.Action("Index", new { page = i, pageSize = Model.PageSize })">@i</a>
+                    </li>
+                }
 
-            @if (Model.HasNextPage)
-            {
-                <li class="page-item pagination-bg">
-                    <a class="page-link pagination-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
-                        <span aria-hidden="true" class="pagination-link fw-medium fs-6">&raquo;</span>
-                    </a>
-                </li>
-            }
-        </ul>
-    </nav>
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item pagination-bg">
+                        <a class="page-link pagination-link" href="@Url.Action("Index", new { page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                            <span aria-hidden="true" class="pagination-link fw-medium fs-6">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
 </div>
