--- a/FoodDelivery/Views/Home/Index.cshtml
+++ b/FoodDelivery/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <h2 class="text-light fs-5 text-center">Please register to place an order</h2>
 </div>
 <div class="present-block">
-    <img src="/images/BackGround/Back.jpg" class="present-block__image" />
+    <img src="/images/Background/Back.jpg" class="present-block__image" />
 </div>
 
 <div class="mt-4 container">
